Update Claude Code settings and fix statusline issue
- Update secrets baseline for lazy-lock.json changes
- Add lazy-lock.json to .gitignore to prevent future commit issues
- Update Claude Code settings for statusline configuration

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@
 .config/karabiner/automatic_backups
 .config/lazy-nvim/.gitignore
 .config/lazy-nvim/.neoconf.json
+.config/lazy-nvim/lazy-lock.json
 .config/nbean/
 
 # ======================
