Fix pre-commit hook to properly exclude lazy-lock.json
- Add lazy-lock.json to detect-secrets exclude pattern
- Remove lazy-lock.json from .gitignore (should be tracked)
- LazyVim lock files contain only Git hashes, not secrets

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     hooks:
       - id: detect-secrets
         args: ['--baseline', '.secrets.baseline']
-        exclude: .*\.lock$|package-lock\.json$|\.pre-commit-config\.yaml$
+        exclude: .*\.lock$|package-lock\.json$|lazy-lock\.json$|\.pre-commit-config\.yaml$
 
   # Pre-commit hooks for common issues
   - repo: https://github.com/pre-commit/pre-commit-hooks
